# aoc2024

./: Cargo.toml
src/: day01.rs  lib.rs  main.rs
