[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6", default-features = false }
gcd = "2.3"
inventory = "0.3"
itertools = "0.13"
nu-ansi-term = "0.50.1"
num_enum = "0.7"
once_cell = "1"
pathfinding = "4.1"
regex = "1.7"
slotmap = "1"
winnow = "0.6.20"

[profile.dev]
opt-level = 3
